--- a/style/style.css
+++ b/style/style.css
@@ -2494,6 +2494,31 @@ h1 {
     padding: 0 64px;
     box-sizing: border-box;
 }
+.fromAreasTabsContainer2 h3 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 140%;
+}
+.tabsList2 h3 {
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 150%;
+}
+.tabsList1 {
+    box-sizing: border-box;
+}
+.tabsList2 ul {
+    border-left: 0;
+    padding-left: 0;
+}
+.fromAreasRightButtonsPrice {
+    margin-right: 0;
+    padding-right: 0;
+}
+.fromAreasRightButtons {
+    display: flex;
+    flex-direction: column;
+}
 .logoHeader {
     margin-top: 0 !important;
 }
@@ -3443,11 +3468,9 @@ header {
        @keyframes bear-animation {
           0% {
               transform: translateY(100%);
-              bottom: -100%;
           }
           100% {
                 transform: translateY(0);
-                bottom: 0;
           }
     }
     .fromAreasSuport {
@@ -3620,7 +3643,30 @@ header {
         transform: unset;
     }
     .fromAreasRegistration {
-        padding: 64px 0 !important;
+        padding: 0 !important;
+    }
+    .fromAreasRegistration .wrapper {
+        padding: 64px 16px !important;
+    }
+    .fromAreasRight {
+        display: block;
+        position: absolute;
+        left: 0;
+        bottom: -100%;
+        
+    }
+    .fromAreasLeft {
+        position: relative;
+        z-index: 10;
+    }
+    .fromAreasTabsContainer.activeBlog {
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0px 20px 50px rgba(18, 17, 39, 0.08);
+        background: #FFF5F2;
+        border-radius: 24px;
+        border: 1px solid #181739;
     }
 }
 @media (max-width: 1350px) {
