--- a/style/style.css
+++ b/style/style.css
@@ -2751,9 +2751,7 @@ h1 {
     font-size: 20px;
     line-height: 140%;
     margin-bottom: 16px;
-    position: absolute;
-    top: 20px;
-    width: 20%;
+    width: 100%;
 }
 .fromAreasTabsContainerRight {
     height: 100%;
@@ -2994,7 +2992,7 @@ header {
     margin-right: 32px !important;
 }
 .transformSectionRight {
-    width: 100% !important;
+    width: 60% !important;
 }
 .fromAreasRight {
     left: 35%;
@@ -3033,7 +3031,8 @@ header {
     padding-left: 64px !important;
 }
 .fromAreas .fromAreasLeft {
-    width: auto !important;
+    width: 100% !important;
+    margin: 0;
 }
 .fromAreasRight {
     width: 65%;
@@ -3213,7 +3212,6 @@ header {
     position: absolute;
     left: 0;
     bottom: -100%;
-    
 }
 .fromAreasLeft {
     position: relative;
@@ -3222,7 +3220,7 @@ header {
 .fromAreasTabsRegitstration.activeBlog {
     position: fixed;
     display: flex;
-    flex-direction: column;
+    flex-direction: column !important;
     box-shadow: 0px 20px 50px rgba(18, 17, 39, 0.08);
     background: #FFF5F2;
     border-radius: 24px;
